Fixed bug text overlapping in homepage sections

--- a/radical_translations/static/css/project.css
+++ b/radical_translations/static/css/project.css
@@ -9175,15 +9175,20 @@ Initial code from this Stackoverflow answer https://stackoverflow.com/a/49373879
       grid-column: 1 / 5;
       grid-row: 1 / 3;
       z-index: 0; }
-      .sections section:nth-child(2) .rich-text {
+      .sections section:nth-child(2).rich-text {
         display: grid;
         grid-template-columns: repeat(5, 1fr); }
-      .sections section:nth-child(2) p:first-child {
+      .sections section:nth-child(2) h2 {
+        grid-column: 1 / 6; }
+      .sections section:nth-child(2) p:first-of-type {
         grid-column: 1 / 6; }
       .sections section:nth-child(2) p {
         grid-column: 1 / 4; }
       .sections section:nth-child(2) .btn {
-        width: 73%; }
+        grid-column: 1 / 4;
+        height: 40px;
+        padding-left: 0;
+        padding-right: 0; }
     .sections section:nth-child(3) {
       grid-column: 4 / 7;
       grid-row: 2 / 3;
